--- a/src/static/scss/components/_projects-list.scss
+++ b/src/static/scss/components/_projects-list.scss
@@ -1,6 +1,15 @@
 .projects-list {
+  @include bp-mediumup {
+    overflow-y: auto;
+  }
+
   & > .search {
     margin-top: 2rem;
+
+    @include bp-mediumup {
+      margin-top: 0;
+      width: calc(50% - 3rem);
+    }
   }
 
   & > .list {
