--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -1,10 +1,13 @@
 .document-body {
+  @include bp-mediumup {
+    width: 66%;
+  }
+
   &.-voidselection {
     user-select: none;
   }
 
-  & > h3,
-  & > h4 {
+  & > h3 {
     text-align: center;
   }
 }
