--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -31,7 +31,7 @@
 
     <title>{% block title %}wikilegis{% endblock title %}</title>
     {% compress css %}
-      {# <link rel="stylesheet" type="text/x-scss" href="{% static 'scss/app.scss' %}"> #}
+      <link rel="stylesheet" type="text/x-scss" href="{% static 'scss/app.scss' %}">
     {% endcompress %}
 
     {% block extracss %}
