Feature/search participants (#30)
* add endpoint de show users filtering by name, email and themes

* add js autocomplete

* add themes in invited group

* add create view to add group

* fix emails and participants lists

* remove comment in app.css

* fix lint errors

* fix flake8

--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -41,7 +41,10 @@
   {% if request.path|startswith:"" %}class="-home"{% endif %}>
     {% block content %}
     {% endblock content %}
+
+    {% block modal %}
     {% include "components/generic-modal.html" %}
+    {% endblock modal %}
 
     {% compress js %}
       <script src="{% static 'django_js_reverse/js/reverse.js' %}"></script>
