--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -28,3 +28,4 @@
 @import 'components/simple-link';
 @import 'components/text-off';
 @import 'components/info-text';
+@import 'components/suggestion-opinion';
