--- a/src/templates/components/suggestion-input.html
+++ b/src/templates/components/suggestion-input.html
@@ -3,14 +3,14 @@
 <div class="suggestion-input js-suggestionInput">
   <div class="content">
     <div class="close js-close"><img class="icon" src="{% static 'img/close.svg' %}"></div>
-    <div class="suggestion-opinion"><button class="js-opinionButton">Ver sugestões</button></div>
-    <h4>Você destacou o trecho:</h4>
+    <button class="suggestion-opinion js-opinionButton">Ver sugestões</button>
+    <h3>Você destacou o trecho:</h3>
     <div class="text">
       <p class="js-selectedText"></p>
     </div>
     <span class="info-text">
       <img src="{% static 'img/atention.svg' %}">
-      <h4>Digite sua opinião sobre ele:</h4>
+      <h3>Digite sua opinião sobre ele:</h3>
     </span>
     <div class="input">
       <input class="js-input" type="text" name="">
