--- a/src/static/scss/base/_unclassed.scss
+++ b/src/static/scss/base/_unclassed.scss
@@ -57,7 +57,7 @@ body {
     overflow: hidden;
 
     &::before {
-      position: absolute;
+      position: fixed;
       z-index: 9;
       top: 0;
       left: 0;
