--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -5,9 +5,9 @@
   left: 0;
 
   display: none;
-  overflow-y: auto;
+  overflow: hidden;
+  flex-direction: column;
 
-  box-sizing: border-box;
   width: 100%;
   height: 100%;
 
@@ -30,16 +30,13 @@
   }
 
   &.-show {
-    display: block;
+    display: flex;
   }
 
   & > .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-
     display: flex;
     align-items: center;
+    flex: 1 0 auto;
     justify-content: space-between;
 
     box-sizing: border-box;
@@ -56,7 +53,6 @@
 
   & > .header > .close {
     position: absolute;
-    top: 1rem;
     right: 1rem;
 
     display: flex;
@@ -75,24 +71,20 @@
   }
 
   & > .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    margin-top: 2.75rem;
-    padding: 1.6rem;
+    overflow-y: auto;
 
     text-align: center;
-
-    min-height: calc(100% - 20rem);
-
-    @include bp-mediumup {
-      margin-top: 2.75rem;
-    }
   }
 
   & > .content.-vote {
+    align-items: flex-start;
+
     text-align: left;
+  }
+
+  & > .content > span,
+  & > .content > p {
+    padding: 0 1.6rem;
   }
 
   & > .content > img,
@@ -109,22 +101,14 @@
     margin-top: 0;
   }
 
-  & > .solid-button {
-    font-size: $font-size-deci;
+  & > .content > .footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 
-    margin: 0 auto;
-    margin-top: 2rem;
-    padding: .5rem 2rem;
-  }
-
-  & .simple-link {
-    margin: 0 auto;
-    margin-top: 1rem;
-  }
-
-  & > .footer {
     box-sizing: border-box;
     width: 100%;
+    margin-top: 1rem;
     padding: 1.6rem;
 
     background-color: #FFF;
@@ -134,18 +118,39 @@
     }
   }
 
-  & > .footer > .content {
-    @include bp-smallup {
-      width: 66%;
-      margin: 0 auto;
-    }
+  & > .content > .footer > .solid-button {
+    font-size: $font-size-deci;
+
+    margin: 0 auto;
+    margin-top: 2rem;
+    padding: .5rem 2rem;
   }
 
-  & > .footer > .content > .info-text {
+  & > .content > .footer > .simple-link {
+    margin: 0 auto;
+    margin-top: 1rem;
+  }
+
+  & > .content > .footer > .info-text {
     margin-top: 0;
   }
 
-  & > .footer > .content > .actions {
+  & > .content > .footer > .actions > * + * {
+    margin-left: 1rem;
+  }
+
+  & > .content > .footer > .actions > .solid-button,
+  & > .content > .solid-button {
+    font-size: $font-size-mili;
+
+    padding: .75rem 1rem;
+
+    @include bp-mediumup {
+      font-size: $font-size-centi;
+    }
+  }
+
+  & > .content .actions {
     display: flex;
     justify-content: space-between;
 
@@ -153,16 +158,6 @@
 
     @include bp-mediumup {
       margin-top: 2rem;
-    }
-  }
-
-  & > .footer > .content > .actions > a {
-    font-size: $font-size-mili;
-
-    padding: .75rem 1rem;
-
-    @include bp-mediumup {
-      font-size: $font-size-centi;
     }
   }
 }
