Add new project page with form
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -4,11 +4,7 @@
   {{ object.title }}
 {% endblock title %}
 {% block content %}
-<div class="nav-bar">
-  <div class="nav-burger"></div>
-  <a href="{% url 'home' %}" class="brand">Wikilegis</a>
-</div>
-
+{% include "components/nav-bar.html" %}
 <div class="nav-menu">
   <nav>
     <a href="#">Vrom</a>
