--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -29,3 +29,7 @@
 @import 'components/text-off';
 @import 'components/info-text';
 @import 'components/suggestion-opinion';
+@import 'components/input-group';
+@import 'components/input-text';
+@import 'components/input-textarea';
+@import 'components/input-select';
