Add new document page and add initial styles
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -33,3 +33,6 @@
 @import 'components/input-text';
 @import 'components/input-textarea';
 @import 'components/input-select';
+@import 'components/autocomplete-list';
+@import 'components/theme-autocomplete';
+@import 'components/document-form';
