Feature/new project (#34)
* Add new project page with form

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add color to theme and update api

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add document backend

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add new document page and add initial styles

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix js lint error

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Remove unused files and methods

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -29,3 +29,10 @@
 @import 'components/text-off';
 @import 'components/info-text';
 @import 'components/suggestion-opinion';
+@import 'components/input-group';
+@import 'components/input-text';
+@import 'components/input-textarea';
+@import 'components/input-select';
+@import 'components/autocomplete-list';
+@import 'components/theme-autocomplete';
+@import 'components/document-form';
