--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -36,3 +36,5 @@
 @import 'components/autocomplete-list';
 @import 'components/theme-autocomplete';
 @import 'components/document-form';
+@import 'components/theme-tag';
+@import 'components/section-group';
