--- a/src/static/scss/components/_autocomplete-list.scss
+++ b/src/static/scss/components/_autocomplete-list.scss
@@ -1,28 +1,22 @@
 .autocomplete-list {
-  background-color: #fff;
   width: 100% !important;
+
+  background-color: #FFF;
 
   @include card-shadow;
 
-  .item {
-    padding: 0 1rem;
+  .theme-tag {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
     align-items: center;
-    transition: background-color 0.2s ease;
+
+    padding: 1rem;
+
+    transition: background-color .2s ease;
 
     &:hover {
       cursor: pointer;
-      background-color: $color-grayish;
-    }
 
-    .dot {
-      width: 1rem;
-      height: 1rem;
-      display: block;
-      border-radius: 50%;
-      margin-right: 1rem;
+      background-color: $color-whitesmoke;
     }
   }
 }
