--- a/src/static/scss/components/_input-textarea.scss
+++ b/src/static/scss/components/_input-textarea.scss
@@ -1,15 +1,21 @@
 .input-textarea {
   display: flex;
-  flex-direction: column;
   flex: 1;
-  margin: 1rem;
+  flex-direction: column;
+
+  margin-top: 1rem;
 
   label {
+    font-size: $font-size-centi;
     font-weight: 500;
+
+    margin-bottom: .5rem;
+
+    opacity: .6;
   }
 
   textarea {
+    width: 100%;
     height: 10rem;
-    width: 100%
   }
 }
