--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -37,10 +37,12 @@
     {% block extracss %}
     {% endblock extracss %}
   </head>
-  <body {% if request.path|startswith:"/p/" and request.path != "/p/new/" %}class="-white"{% endif %}
-  {% if request.path|startswith:"" %}class="-home"{% endif %}>
+  <body {% if request.path|startswith:"/p/" and request.path != "/p/new/" %}class="-white"{% elif request.path == "/" %}class="-home"{% endif %}>
+    {% include "components/nav-bar.html" %}
+    {% include "components/nav-menu.html" %}
     {% block content %}
     {% endblock content %}
+
 
     {% block modal %}
     {% include "components/generic-modal.html" %}
@@ -49,6 +51,8 @@
     {% compress js %}
       <script src="{% static 'django_js_reverse/js/reverse.js' %}"></script>
       <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+      <script src="{% static 'js/components/body/view.js' %}"></script>
+      <script src="{% static 'js/components/navBar/view.js' %}"></script>
       <script src="{% static 'js/components/genericModal/view.js' %}"></script>
       <script src="{% static 'js/pages/base.js' %}"></script>
       <script src="{% static 'js/utils/publishSubscribe.js' %}"></script>
