--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -41,3 +41,5 @@
 @import 'components/document-form';
 @import 'components/theme-tag';
 @import 'components/section-group';
+@import 'components/input-profile';
+@import 'components/user-profile';
