--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -29,20 +29,57 @@
     <input type="text" name="group_name" id="id_group_name">
   </div>
 
-  {{ form.as_p }}
-  <div class="input-text ui-widget">
-    <label for="name">Usuários: </label>
+
+
+  <div class="input-select -hide">
+    <select name="document" required="" id="id_document">
+      <option value="">---------</option>
+
+      <option value="1" selected="">Patrocínio de bancos públicos a clubes de futebol</option>
+    </select>
+  </div>
+
+  <div class="input-text">
+    <label for="id_closing_date">Data de encerramento:</label>
+    <input type="text" name="closing_date" required="" id="id_closing_date">
+  </div>
+
+  <div class="input-text -hide">
+    <input type="checkbox" name="public_participation" id="id_public_participation">
+  </div>
+
+  <div class="input-text">
+    <label for="name">Buscar perfis por nome ou email: </label>
     <input id="name" class="js-name">
   </div>
+
+  <div class="input-profile js-inputProfile">
+    <label for="name">2 Participantes atuais no grupo: </label>
+    <!-- <li class="user-profile">
+      <img class="avatar" src="{% static 'img/avatar2.png' %}">
+      <div class="info">
+        <span class="name">Tiago Rocha</span>
+        <div class="tags">
+          <li class="theme-tag js-tag">
+            <span class="dot" style="background-color: rgb(216, 77, 240);"></span>
+            Educação
+          </li>
+        </div>
+      </div>
+      <div class="action">
+        <div class="add"></div>
+        <div class="remove"></div>
+      </div>
+    </li> -->
+  </div>
+
 
   <div class="ui-widget" style="margin-top:2em; font-family:Arial">
     Resultado:
     <div id="log" style="height: 200px; width: 300px; overflow: auto;" class="ui-widget-content"></div>
   </div>
 
-  <p>
-    <button class="js-send-button">Salvar</button>
-  </p>
+  <button class="solid-button -green js-send-button">Salvar</button>
 </main>
 
 {% endblock content %}
