--- a/src/static/scss/components/_input-text.scss
+++ b/src/static/scss/components/_input-text.scss
@@ -5,6 +5,10 @@
 
   margin-top: 1rem;
 
+  &.-hide {
+    display: none;
+  }
+
   label {
     font-size: $font-size-centi;
     font-weight: 500;
