--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -43,3 +43,4 @@
 @import 'components/section-group';
 @import 'components/input-profile';
 @import 'components/user-profile';
+@import 'components/close-icon';
