--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -10,6 +10,9 @@
 @import 'base/unclassed';
 @import 'base/typography';
 
+// Trumps
+@import 'trumps/hidden';
+
 // Components
 @import 'components/document-excerpt';
 @import 'components/document-body';
