--- a/src/static/scss/components/_theme-tag.scss
+++ b/src/static/scss/components/_theme-tag.scss
@@ -8,6 +8,11 @@
 
   color: $color-gray;
 
+  &.-selected:hover {
+    text-decoration: line-through;
+    color: $color-red;
+  }
+
   & > .dot {
     display: inline-block;
 
