--- a/src/static/scss/components/_autocomplete-list.scss
+++ b/src/static/scss/components/_autocomplete-list.scss
@@ -6,6 +6,7 @@
   @include card-shadow;
 
   .theme-tag {
+    cursor: pointer;
     display: flex;
     align-items: center;
 
@@ -13,9 +14,7 @@
 
     transition: background-color .2s ease;
 
-    &:hover {
-      cursor: pointer;
-
+    &.-active {
       background-color: $color-whitesmoke;
     }
   }
