--- a/src/templates/pages/new-document.html
+++ b/src/templates/pages/new-document.html
@@ -15,11 +15,8 @@
             <input class="js-input" type="text" name="theme-autocomplete">
             {{form.themes.errors}}
             <div class="themes">
-              <span class="title">Temas Adicionados:</span>
-              <ul class="tags js-tags">
-                <li class="item">
-                </li>
-              </ul>
+              <span class="title _hidden js-title">Temas Adicionados:</span>
+              <ul class="tags js-tags"></ul>
             </div>
           </div>
         </div>
