add theme in participant item

--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -42,7 +42,7 @@
 
   <div class="input-text">
     <label for="name">Buscar perfis por nome ou email: </label>
-    <input id="name" class="js-name">
+    <input id="name" class="js-search-name">
   </div>
 
   <div class="input-group">
