add counter to boards

--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -46,18 +46,17 @@
   </div>
 
   <div class="input-group">
+    <span>Participantes atuais no grupo: <span class="js-countSelectables">0</span></span>
     <div class="input-profile js-inputProfile">
-      <label for="name">2 Participantes atuais no grupo: </label>
     </div>
+    <span>Participantes atuais no grupo: <span class="js-countSelecteds">0</span></span>
     <div class="input-profile js-selectedProfile">
-      <label for="name">2 Participantes atuais no grupo: </label>
     </div>
   </div>
 
   <div class="input-select _hide">
     <select name="document" required="" id="id_document">
       <option value="">---------</option>
-
       <option value="1" selected="">Patrocínio de bancos públicos a clubes de futebol</option>
     </select>
   </div>
