Improve input profile

--- a/src/static/scss/components/_input-profile.scss
+++ b/src/static/scss/components/_input-profile.scss
@@ -1,17 +1,28 @@
 .input-profile {
   font-size: .875rem;
 
+  position: relative;
+
   box-sizing: border-box;
   width: 100%;
   height: 25rem;
   margin-top: 1.5rem;
-  padding: .875rem;
+  padding-top: 3.25rem;
 
   background-color: #FFF;
 
   @include card-shadow;
 
-  & > label {
+  & > .label {
     font-size: 1rem;
+
+    position: absolute;
+    top: 0;
+
+    padding: .875rem;
+  }
+
+  & > .profiles > ul {
+    width: auto !important;
   }
 }
