--- a/src/static/scss/components/_section-group.scss
+++ b/src/static/scss/components/_section-group.scss
@@ -2,4 +2,9 @@
   width: 66%;
   margin: 0 auto;
   padding-top: 3.75rem;
+
+  & > .solid-button {
+    margin-top: 1.5rem;
+    margin-left: auto;
+  }
 }
