Create active state

--- a/src/static/scss/components/_input-profile.scss
+++ b/src/static/scss/components/_input-profile.scss
@@ -14,12 +14,15 @@
   @include card-shadow;
 
   & > .label {
-    font-size: 1rem;
+    font-size: $font-size-centi;
+    font-weight: 500;
 
     position: absolute;
     top: 0;
 
     padding: .875rem;
+
+    opacity: .6;
   }
 
   & > .profiles > ul {
