--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -45,12 +45,12 @@
 
   <div class="input-group">
     <div class="input-profile">
-      <span class="label">Participantes atuais no grupo: <span class="js-countSelectables">0</span></span>
+      <span class="label"><b class="js-countSelectables">0</b> Perfis encontrados com o filtro </span>
       <div class="profiles js-inputProfile">
       </div>
     </div>
     <div class="input-profile">
-      <span class="label">Participantes atuais no grupo: <span class="js-countSelecteds">0</span></span>
+      <span class="label"><b class="js-countSelecteds">0</b> Participantes atuais no grupo</span>
       <div class="profiles js-selectedProfile">
       </div>
     </div>
