--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -40,7 +40,10 @@
 
   <div class="input-text">
     <label for="name">Buscar perfis por nome ou email: </label>
-    <input id="name" class="js-search-name">
+    <div class="input">
+      <input id="name" class="js-search-name">
+      <div class="filter">Filtros</div>
+    </div>
   </div>
 
   <div class="input-group">
