--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -44,3 +44,4 @@
 @import 'components/input-profile';
 @import 'components/user-profile';
 @import 'components/close-icon';
+@import 'components/input-filter';
