--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -38,7 +38,7 @@
 
   <h2>Gerenciar Perfis do Grupo</h2>
 
-  <div class="input-text">
+  <div class="input-filter">
     <label for="name">Buscar perfis por nome ou email: </label>
     <div class="input">
       <input id="name" class="js-search-name">
