add class empty in input-profile

--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -47,12 +47,12 @@
   </div>
 
   <div class="input-group">
-    <div class="input-profile">
+    <div class="input-profile -empty">
       <span class="label"><b class="js-countSelectables">0</b> Perfis encontrados com o filtro </span>
       <div class="profiles js-inputProfile">
       </div>
     </div>
-    <div class="input-profile">
+    <div class="input-profile -empty">
       <span class="label"><b class="js-countSelecteds">0</b> Participantes atuais no grupo</span>
       <div class="profiles js-selectedProfile">
       </div>
