Create filter modal

--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -73,6 +73,7 @@
   <button class="solid-button -green js-send-button">Salvar</button>
 </main>
 
+{% include "components/filter-modal.html" %}
 {% endblock content %}
 
 {% block modal %}
